# simpletask-backend-fastapi

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 2025_06_05_2229-7fa52f6cfaa8_initial_migration_create_all_tables.py  2025_06_12_1916-a70f306364c7_initial_migration.py
app/: main.py
app/api/v1/: auth.py  router.py  tags.py  tasks.py  users.py
app/core/: config.py  constants.py  database.py  dependencies.py  redis.py  security.py
app/crud/: __init__.py  base.py  tag.py  task.py  user.py
app/dtos/: __init__.py  base.py  tag.py  task.py  user.py
app/models/: __init__.py  base.py  init.py  tag.py  task.py  task_tag.py  user.py
app/repositories/: __init__.py  tag.py  task.py  task_tag.py  user.py
app/schemas/: __init__.py  auth.py  tag.py  task.py  user.py
app/services/: auth.py  tag.py  task.py  user.py
app/utils/: __init__.py  db_helpers.py  error_handler.py  jwt_helpers.py  pagination.py  permission.py
docker/postgres/: init.sql
requirements/: base.txt  dev.txt  prod.txt
scripts/: dev.sh  env-check.sh  generate-secrets.sh  setup.sh
tests/: README.md  conftest.py  test_auth.py  test_data_integrity.py  test_tags_crud.py  test_tasks_crud.py
tests/fixtures/: auth.py  entities.py  sample_data.py
tests/tests_config/: app_factory.py  database.py  mocks.py  schema_overrides.py
